--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Domino Critical V21</title>
+    <title>Domino Critical V22</title>
     <!-- 物理演算ライブラリ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <style>
@@ -236,13 +236,13 @@
         <div id="message-area">
             <button id="start-btn" class="btn-start">TAP TO START</button>
             <div style="margin-top:15px; font-size:11px; color:#888;">
-                V21: FEVER BGM & SINGLE REFILL
+                V22: FEVER +1s (MAX 10s)
             </div>
         </div>
     </div>
 
 <script>
-    // --- CONFIG V21 ---
+    // --- CONFIG V22 ---
     const CONFIG = {
         superJackpotChance: 0.001, 
         miniJackpotChance: 0.01,   
@@ -252,7 +252,7 @@
         splitChance: 0.20,         
         
         // FEVER SETTINGS
-        feverBaseDuration: 3000,
+        feverBaseDuration: 1000,   // 1秒追加 (変更)
         feverMaxDuration: 10000,   // Max cap 10s
         feverProbTable: [
             { mult: 2,    prob: 0.60 },
